# AMP_ASSv2

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  amd64-docker.sh  amp_cli.py  disable_zed.sh  enable_zed.sh  setup.py  toggle_zed.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  ci.yml  cli.yml  format.yaml  rosserial.yaml
amp_cli/: __init__.py
amp_cli/docker/: desktop.Dockerfile  mesa.Dockerfile
amp_cli/extra/completions/: amp_cli.bash  amp_cli.zsh
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: env_sim.pc  mover.pc  nav_frames.pc  slam_mode_goal.pc
devel/share/env_sim/cmake/: env_simConfig.cmake
devel/share/mover/cmake/: moverConfig.cmake
devel/share/nav_frames/cmake/: nav_framesConfig.cmake
devel/share/slam_mode_goal/cmake/: slam_mode_goalConfig.cmake
docker/: amd64.Dockerfile  base.Dockerfile  frame.Dockerfile  mesa.Dockerfile
launch/: stage.launch
src/amp_msgs/: CMakeLists.txt  package.xml
src/amp_msgs/msg/: SerialPacket.msg
src/cone_finder/: CMakeLists.txt  cone_segmentation.rviz  lidar_rtabmap.rviz  nodelet_plugins.xml  package.xml
src/cone_finder/launch/: cone_finder.launch  cone_finder_fake.launch  cone_segmentation.launch  demo_hector.launch  play_limo_bag.launch  rtab_map_stereo.launch
src/cone_finder/nodes/: cone_finder.py  cone_finder_fake.py  cone_list_viz.py
src/cone_finder/params/: cone_finder.yaml  cone_finder_fake.yaml
src/cone_finder/scripts/: cone_finder.py  cone_finder_fake.py  cone_list_viz.py  pointcloud_fix.py
src/cone_finder/src/: cluster_extractor.cpp
src/env_sim/: CMakeLists.txt  package.xml
src/env_sim/launch/: stage.launch
src/env_sim/sim_files/: track.world
src/gazebo_sim/racecar/launch/: mux.launch
src/gazebo_sim/racecar_control/launch/: racecar_control.launch
src/gazebo_sim/racecar_control/scripts/: keyboard_teleop.py  servo_commands.py
src/gazebo_sim/racecar_description/urdf/: racecar.xacro
src/gazebo_sim/racecar_gazebo/launch/: racecar.launch
src/mover/: CMakeLists.txt  mover.py  package.xml
src/navigation_stack/: CMakeLists.txt  package.xml
src/navigation_stack/launch/: move_base.launch
src/navigation_stack/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/obstacle_filter/: CMakeLists.txt  package.xml
src/obstacle_filter/launch/: obstacle_filter.launch
src/obstacle_filter/nodes/: cone_list_viz.py  obstacle_filter.py
src/obstacle_filter_msgs/: CMakeLists.txt  package.xml
src/obstacle_filter_msgs/msg/: ConeList.msg
src/occupancy_constructor/: CMakeLists.txt  package.xml
src/occupancy_constructor/launch/: occupancy_constructor.launch
src/occupancy_constructor/nodes/: occupancy_constructor.py
src/occupancy_constructor/params/: occupancy_constructor.yaml
src/occupancy_constructor/scripts/: occupancy_constructor.py
src/physical/: CMakeLists.txt  package.xml
src/physical/launch/: kart_rosbag.launch
src/rtabmap_manager/: CMakeLists.txt  package.xml
src/rtabmap_manager/launch/: rtabmap_manager.launch
src/rtabmap_manager/params/: rtabmap.yaml
src/serial_packet/: CMakeLists.txt  README.md  package.xml  setup.py
src/serial_packet/launch/: keyboard_control.launch  rqt_control.launch
src/serial_packet/nodes/: packet_node.py
src/serial_packet/src/serial_packet/: PacketClient.py  __init__.py
src/sim_stage/: CMakeLists.txt  package.xml
src/sim_stage/launch/: stage.launch
src/sim_stage/params/: amcl_params.yaml
src/sim_stage/sim_files/: carlike_robot.inc  map.inc  track.yaml  track_rviz.rviz
src/simulator/: README.md
src/simulator/basement/: readimage.py  readlidar.py
src/simulator/basement/maps/: basement_hallways_10cm.yaml  basement_hallways_5cm.yml  short-course-33.yml
src/simulator/basement/scripts/: readimage.py
src/simulator/control/: CMakeLists.txt  keyboard_teleop.py  package.xml  racecar_control.launch  servo_commands.py
src/simulator/control/launch/: racecar_control.launch
src/simulator/gazebo/: package.xml
src/simulator/racecar_description/: package.xml
src/simulator/racecar_gazebo/: CMakeLists.txt  package.xml
src/slam_mode_goal/: CMakeLists.txt  package.xml  slam_mode_goal.py
src/slam_mode_goal/scripts/: slam_mode_goal.py
src/static_tf_config/: CMakeLists.txt  package.xml
src/static_tf_config/launch/: static_transforms_config.launch
src/zed_host/: CMakeLists.txt  package.xml  zed_fake.bag
src/zed_host/launch/: zed_host.launch  zed_host_fake.launch
src/zed_host/rviz/: zed_preview.rviz
(+90 files in other folders)
