<?xml version="1.0"?>
<package format="2">
  <name>obstacle_filter_msgs</name>
  <version>1.0.0</version>
  <description>Custom messages for obstacle_filter</description>
  
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
