<?xml version="1.0"?>
<package format="2">
  <name>occupancy_constructor</name>
  <version>1.0.0</version>
  <description>"occupancy_constructor" creates an occupancy map containing "track walls", extrapolated from cone positions</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>amp_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>amp_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>amp_msgs</exec_depend>
</package>
