<?xml version="1.0"?>
<package format="2">
  <name>rtabmap_manager</name>
  <version>1.0.0</version>
  <description>"rtabmap_manager" launches RTAB-map to populate an occupancy grid and provide localization pose</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rtabmap</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
</package>
